fix bug in SittingData scheme
