# src/routers/datas.py
@@ -49,12 +49,12 @@ def push_data(data: schemas.TimeDataPost, db: Session = Depends(get_db)):
 def get_sitting_time_day(sensor_id: int, db: Session = Depends(get_db)):
     return crud.get_sitting_time(db, sensor_id=sensor_id, days=1, timestep=24)
 
-@datas_router.get("/data/sitting/week/{sensor_id}", response_model=List[schemas.TimeData])
-@datas_router.get("/data/sitting/week/{sensor_id}/", response_model=List[schemas.TimeData])
+@datas_router.get("/data/sitting/week/{sensor_id}", response_model=List[schemas.SittingData])
+@datas_router.get("/data/sitting/week/{sensor_id}/", response_model=List[schemas.SittingData])
 def get_sitting_week(sensor_id: int, db: Session = Depends(get_db)):
     return crud.get_timedata_mean(db, sensor_id=sensor_id, days=7, timestep=7, offset_day=0)
 
-@datas_router.get("/data/sitting/month/{sensor_id}", response_model=List[schemas.TimeData])
-@datas_router.get("/data/sitting/month/{sensor_id}/", response_model=List[schemas.TimeData])
+@datas_router.get("/data/sitting/month/{sensor_id}", response_model=List[schemas.SittingData])
+@datas_router.get("/data/sitting/month/{sensor_id}/", response_model=List[schemas.SittingData])
 def get_sitting_month(sensor_id: int, db: Session = Depends(get_db)):
     return crud.get_timedata_mean(db, sensor_id=sensor_id, days=30, timestep=30, offset_day=0)
